--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -12,7 +12,7 @@
     <title>shoppingCart</title>
 </head>
 <body ng-app="myApp">
-    <div ng-controller="shoppingCartCtrl">
+    <div class="f20" ng-controller="shoppingCartCtrl">
         <!--店铺-->
         <ul class="ml15" ng-repeat="shopItem in shoppingCart.shopList">
             <!--店铺名称-->
@@ -26,6 +26,9 @@
                 <input type="checkbox" ng-model="productItem.check" ng-change="productChange(productItem,shopItem,shoppingCart)">
                 <span>我是商品</span>
                 <span class="ml50">价格：{{(productItem.price / 100)}}</span>
+                <span class="ml30" ng-click="decrementQuantity(productItem,shopItem,shoppingCart)">-</span>
+                <input type="text" class="ml5 mr5" ng-model="productItem.num" ng-change="productItemNumChange(productItem,shopItem,shoppingCart)"/>
+                <span ng-click="incrementQuantity(productItem,shopItem,shoppingCart)">+</span>
             </li>
         </ul>
         <div>
@@ -33,7 +36,6 @@
             <span>我是购物车</span>
             <span class="ml50">价格：{{(shoppingCart.price / 100)}}</span>
         </div>
-
     </div>
     <script src="js/Controller/shoppingCartCtrl.js"></script>
     <script src="js/Service/ShoppingCartService.js"></script>
