--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -22,17 +22,19 @@
                 <span>我是店铺</span>
                 <span class="ml50">价格：{{(shopItem.price / 100)}}</span>
                 <span class="ml50" ng-click="deleteShopItem(shopItem,shoppingCart)">删除</span>
+
+                <!--商品-->
+                <div ng-repeat="productItem in shopItem.itemList" class="ml30" ng-if="productItem.undelete">
+                    <input type="checkbox" ng-model="productItem.check" ng-change="productChange(productItem,shopItem,shoppingCart)">
+                    <span>我是商品</span>
+                    <span class="ml50">价格：{{(productItem.price / 100)}}</span>
+                    <span class="ml30" ng-click="decrementQuantity(productItem,shopItem,shoppingCart)">-</span>
+                    <input type="text" class="ml5 mr5" ng-model="productItem.num" ng-change="productItemNumChange(productItem,shopItem,shoppingCart)"/>
+                    <span ng-click="incrementQuantity(productItem,shopItem,shoppingCart)">+</span>
+                    <span class="ml50" ng-click="deleteProductItem(productItem,shopItem,shoppingCart)">删除</span>
+                </div>
             </li>
-            <!--商品-->
-            <li ng-repeat="productItem in shopItem.itemList" class="ml30" ng-if="productItem.undelete">
-                <input type="checkbox" ng-model="productItem.check" ng-change="productChange(productItem,shopItem,shoppingCart)">
-                <span>我是商品</span>
-                <span class="ml50">价格：{{(productItem.price / 100)}}</span>
-                <span class="ml30" ng-click="decrementQuantity(productItem,shopItem,shoppingCart)">-</span>
-                <input type="text" class="ml5 mr5" ng-model="productItem.num" ng-change="productItemNumChange(productItem,shopItem,shoppingCart)"/>
-                <span ng-click="incrementQuantity(productItem,shopItem,shoppingCart)">+</span>
-                <span class="ml50" ng-click="deleteProductItem(productItem,shopItem,shoppingCart)">删除</span>
-            </li>
+
         </ul>
         <div>
             <input type="checkbox" ng-model="shoppingCart.check" ng-change="cartChange(shoppingCart)">
